fixed alignment

--- a/src/PromotionEdit/PromotionEdit.scss
+++ b/src/PromotionEdit/PromotionEdit.scss
@@ -37,22 +37,19 @@
 .kit-promotion-wrapper__row {
 	padding-top: 23px;
 	width: 100%;
-	display: inline-block;
-	vertical-align: middle;
+	display: flex;
+	align-items: center;
+	flex-wrap: wrap;
 }
 
 .kit-promotion-wrapper__row-left {
 	width: 100%;
 	max-width: 445px;
-	display: inline-block;
-	vertical-align: middle;
 }
 
 .kit-promotion-wrapper__row-right {
 	width: 100%;
 	max-width: 267px;
-	display: inline-block;
-	vertical-align: middle;
 	margin-left: 10px;
 }
 
@@ -61,6 +58,7 @@
 	font-size: 16px;
 	color: #333;
 	padding-bottom: 10px;
+	width: 100%;
 }
 
 .kit-promotion-wrapper__row-description {
@@ -72,7 +70,6 @@
 }
 
 .kit-promotion-wrapper__max-discount {
-	display: inline-block;
 	width: 40px;
 	margin-left: 10px;
 	position: relative;
